<resources>
    <string name="app_name">Vinilos - Equipo 12</string>

    <string name="guest">Invitado</string>
    <string name="collector">Coleccionista</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="menu_artists">Artistas</string>
    <string name="menu_albums">Álbumes</string>
    <string name="menu_collectors">Coleccionistas</string>
    <string name="menu_guest">Invitado</string>
    <string name="exit">Salir</string>
    <string name="album">Álbum</string>
    <string name="release_date">Fecha lanzamiento:</string>
    <string name="tracks">Canciones</string>
    <string name="comments">Comentarios</string>
...
