...
        app:backgroundTint="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guest_button"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_conversion_absoluteHeight="79dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <Button
        android:id="@+id/guest_button"
...
