...
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/trackNameField"
            android:layout_width="366dp"
            android:layout_height="50dp"
            android:layout_margin="8sp"
            android:ems="10"
            android:hint="@string/track_name"
            android:textColorHint="#757575"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinkTrackLabel" />

        <EditText
            android:id="@+id/trackDurationField"
            android:layout_width="366dp"
            android:layout_height="50dp"
            android:layout_margin="8sp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/track_duration"
...
